# deliberate

./: .gitignore  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  README.md  ROADMAP.md  VISION.md  mcp_server.py  pyproject.toml
.github/workflows/: test.yml
.specify/: init-options.json
deliberate/: __init__.py  classify.py  cli.py  enforce.py  memory.py  process.py  templates.py  worktree.py
deliberate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deliberate_eval/: __init__.py  agents.py  cli.py  metrics.py  report.py  runner.py  tasks.py  treatments.py
results/: pilot-attrs-1348.jsonl  pilot-attrs-1479.jsonl  pilot-black-4841.jsonl  pilot-boltons-389.jsonl  pilot-click-3019-3seeds.jsonl  pilot-click-3019.jsonl  pilot-combined.jsonl  pilot-flask-5870.jsonl  pilot-flask-5916.jsonl  pilot-humanize-24.jsonl  pilot-isort-2338.jsonl  pilot-more-itertools-658.jsonl
specs/001-adaptive-planning/: data-model.md  plan.md  research.md  spec.md  tasks.md
tasks/: build_pilot.py  pilot.jsonl
tasks/patches/: attrs-1348.patch  attrs-1479.patch  black-4841.patch  boltons-389.patch  click-3019.patch  flask-5870.patch  flask-5916.patch  humanize-24.patch  isort-2338.patch  more-itertools-658.patch
templates/: brief.md  plan.md  research.md  review.md  spec.md  tasks.md  verify.md
templates/steps/: brief.md  plan.md  research.md  spec.md  tasks.md
templates/treatments/: class_a.md  (+1 more)
tests/: test_campaign.py  test_classify.py  test_enforce.py  test_escalation.py  test_mcp_server.py  test_memory.py  test_process.py  test_templates.py  test_worktree.py
(+6 files in other folders)
